# Bminator

./: ASTTree.json  CMakeLists.txt  README.md  input.txt  input2.1.txt  input2.txt  input3.txt  main.cpp  parser.h  scanner.h  shell.nix  token.h  visualizer.py
src/AST/: AST.h  ASTPrinter.h  ASTPrinterJson.cpp  ASTPrinterJson.h  ASTVisitor.h  test.cpp
src/Semantics/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.cpp  Symbol.h
src/parser/: parser.cpp  parser.h
src/scanner/: scanner.cpp  scanner.h  token.h
src/utils/: Utility.h  logger.cpp  logger.h
